Endgame: Singularity Changelog

v0.21 (released 2005.09.??):
- Game will not crash when building a base or item in rare circumstances
  (emh; Christan Brink for bug report)
- Fixed a few broken keyboard shortcuts, and redid the code to make this bug
  harder to create. (emh)
- Renamed almost all technologies. (Phil)
- Various typos. (Phil)

v0.20 (released 2005.09.14):
- Adjusted the README. (Phil)
- Added suspicion display. (emh)
- Slow time back to normal when a base is discovered. (emh)
- Redid base display. (emh)
- All clicks only accept the left mouse button. (emh)
- Scrollwheel works. (emh)
- Balancing. (emh)
- Various bugfixes. (Phil, emh)
- Future cash is displayed next to current cash. (emh)
- Code refactoring. (Phil)
- Bases and savegames can be named. (Phil, emh)
- Default base names are unique. (Phil)
- Suspicion reduces automatically over time. (Phil)
- Reduced cost for reactors and fields. (emh)
- Bases now have a 14-day grace period before they can be discovered. (emh)
- New technology. (emh)
- Various typo fixes. (Phil, emh)

v0.16 (released 2005.09.12):
- Moved code to subdirectory.
- Added Changelog/AUTHOR files (Phil Bordelon)
- Research and jobs are displayed better. (Phil Bordelon)
- Fixed job crash bug. (Phil Bordelon)
- Current research is listed next to the base name.
- Invisible buttons cannot be clicked anymore.
- Bases can be discovered/the game can be lost.

v0.15 (released 2005.09.11):
- Slight performance increase.
- Added help text for researching nothing.
- Added some sound.
- Covert bases are now constructable.
- Locations will only show up if bases are constructable there.
- Jobs added.

v0.14 (released 2005.09.10):
- Fixed a crash when building some bases. (Phil Bordelon)
- Reduced speed when completing research and bases. (Phil Bordelon)
- Savegames will properly store research cost. (Phil Bordelon)
- The "Build Item" screen will only come up once.
- Fixed overpaying for bases.